welcome.lessons.welcome.bdr.BDR2.scala.code
var dance=false//passe en true quand la danse s'arrete (passage sur une case vide)
var x = ""
while (dance==false) {
	if (estSurMessage()) {
		x = litMessage();
		x match {    //traduction des instructions données par chaques lettres
			case "R" => droite() avance()
			case "L" => gauche() avance()
			case "I" => gauche() gauche() avance()
			case "A" => avance()
			case "B" => avance() avance()
			case "C" => avance() avance() avance()
			case "Z" => recule()
			case "Y" => recule() recule()
			case "X" => recule() recule() recule()
			case "D" => avance() avance() avance() avance()
			case "E" => avance() avance() avance() avance() avance()
			case "F" => avance() avance() avance() avance() avance() avance()
			case "W" => recule() recule() recule() recule()
			case "V" => recule() recule() recule() recule() recule()
			case "U" => recule() recule() recule() recule() recule() recule()
			case _ => dance=true
		}
}
}
